style: padronizando estruturas de service e dtos